--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,84 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.4.0
+astunparse==1.6.3
+beautifulsoup4==4.12.3
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+comtypes==1.3.1
+distlib==0.3.8
+dm-tree==0.1.8
+et-xmlfile==1.1.0
 fastapi==0.114.2
+filelock==3.13.1
+Flask==3.0.2
+flatbuffers==24.3.7
+fsspec==2024.2.0
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.62.1
+gunicorn==23.0.0
 h11==0.14.0
-idna==3.10
-networkx==3.3
+h5py==3.10.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+joblib==1.3.2
+keras==3.0.5
+libclang==16.0.6
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.7
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.4
+openpyxl==3.1.2
+opt-einsum==3.3.0
+packaging==24.0
+pandas==2.2.2
+platformdirs==4.2.0
+protobuf==4.25.3
 pydantic==2.9.1
 pydantic_core==2.23.3
+Pygments==2.17.2
+pypiwin32==223
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pyttsx3==2.90
+pytz==2024.1
+pywin32==306
+regex==2023.12.25
+requests==2.31.0
+rich==13.7.1
+setuptools==69.2.0
+six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 starlette==0.38.5
-typing_extensions==4.12.2
+sympy==1.12
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-intel==2.16.1
+termcolor==2.4.0
+textblob==0.18.0.post0
+torch==2.2.1
+tqdm==4.66.2
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
 uvicorn==0.30.6
+virtualenv==20.25.1
+virtualenvwrapper-win==1.2.7
+Werkzeug==3.0.1
+wheel==0.43.0
+wrapt==1.16.0
